2013-11-14  David Schneider  <david.schneider@bivab.de>

	* src/arm/ffi.c: Fix register allocation for mixed float and
	doubles.
	* testsuite/libffi.call/cls_many_mixed_float_double.c: Testcase
	for many mixed float and double arguments.

2013-11-13  Alan Modra  <amodra@gmail.com>

	* doc/libffi.texi (Simple Example): Correct example code.
	* doc/libffi.info, doc/stamp-vti, doc/version.texi: Rebuilt.

2013-11-13  Anthony Green  <green@moxielogic.com>

	* include/ffi_common.h: Respect HAVE_ALLOCA_H for GNU compiler
	based build. (Thanks to tmr111116 on github)

2013-11-09  Anthony Green  <green@moxielogic.com>

	* m4/libtool.m4: Refresh.
	* configure, Makefile.in: Rebuilt.
	* README: Add more notes about next release.

2013-11-09  Shigeharu TAKENO  <shige@iee.niit.ac.jp>

	* m4/ax_gcc_archflag.m4 (ax_gcc_arch): Don't recognize
	UltraSPARC-IIi as ultrasparc3.

2013-11-06  Mark Kettenis  <kettenis@gnu.org>

	* src/x86/freebsd.S (ffi_call_SYSV): Align the stack pointer to
        16-bytes.

2013-11-06  Konstantin Belousov <kib@freebsd.org>

	* src/x86/freebsd.S (ffi_closure_raw_SYSV): Mark the assembler
	source as not requiring executable stack.

2013-11-02  Anthony Green  <green@moxielogic.com>

	* doc/libffi.texi (The Basics): Clarify return value buffer size
	requirements.  Also, NULL result buffer pointers are no longer
	supported.
	* doc/libffi.info: Rebuilt.

2013-11-02  Mischa Jonker  <mjonker@synopsys.com>

	* Makefile.am (nodist_libffi_la_SOURCES): Fix build error.
	* Makefile.in: Rebuilt.

2013-11-02  David Schneider  <david.schneider@bivab.de>

	* src/arm/ffi.c: more robust argument handling for closures on arm hardfloat
	* testsuite/libffi.call/many_mixed.c: New file.
	* testsuite/libffi.call/cls_many_mixed_args.c: More tests.

2013-11-02  Vitaly Budovski

	* src/x86/ffi.c (ffi_prep_cif_machdep): Don't align stack for win32.

2013-10-23  Mark H Weaver  <mhw@netris.org>

	* src/mips/ffi.c: Fix handling of uint32_t arguments on the
	MIPS N32 ABI.
